--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phone Number Tracker</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>GeoCaller</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h2>Phone Number Tracker</h2>
+        <h2>GeoCaller</h2>
         <input type="text" id="phoneInput" placeholder="Enter phone number (with country code)">
         <button onclick="trackNumber()">Track Location</button>
         <div id="result"></div>
