--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoCaller</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Geocaller - Phone Number Tracker</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h2>GeoCaller</h2>
-        <input type="text" id="phoneInput" placeholder="Enter phone number (with country code)">
-        <button onclick="trackNumber()">Track Location</button>
+        <h1>Geocaller</h1>
+        <p>Track phone number details including country, location, and carrier.</p>
+        <input type="text" id="phoneInput" placeholder="Enter phone number">
+        <button onclick="trackNumber()">Track Number</button>
         <div id="result"></div>
     </div>
 
